troca de cores e mais conteudo

--- a/theme.html
+++ b/theme.html
@@ -38,7 +38,7 @@
       <header>
         <p class="p-2 text-center text-slate-400">
           <a href="https://github.com/vegedra/" target="blank"><i
-              class="fa-brands fa-github pt-[2.5px] text-xl float-left text-slate-500 hover:text-pink-800"></i>ivo@vegedra</a>
+              class="fa-brands fa-github pt-[2.5px] text-xl float-left text-slate-500 hover:text-pink-800"></i>visitante@ivo</a>
           <a href="javascript:close_window();"><i
               class="fa-solid fa-circle-xmark pt-[2.5px] text-xl justify-end text-slate-500 hover:text-red-500 items-end  float-right"></i></a>
         </p>
@@ -49,26 +49,23 @@
           <pre
             class="ascii pt-2 pb-5 prose lg:prose-xl text-[#9ccfd8B3] whitespace-pre-wrap inline-block break-words leading-none"
             style="font-family: monospace,-webkit-pictograph;">
-   ______   __  __  _____      
-  /\__  _\ /\ \/\ \/\  __`\    
-  \/_/\ \/ \ \ \ \ \ \ \/\ \   
-     \ \ \  \ \ \ \ \ \ \ \ \  
-      \_\ \__\ \ \_/ \ \ \_\ \ 
-      /\_____\\ `\___/\ \_____\
-      \/_____/ `\/__/  \/_____/
+  888  Y8b Y88888P   e88 88e           
+  888   Y8b Y888P   d888 888b        
+  888    Y8b Y8P   C8888 8888D       
+  888     Y8b Y     Y888 888P        
+  888      Y8P       "88 88"         
             </pre>
+
           <div class="pl-2 float-right" ; style="font-family: 'Ubuntu', sans-serif;">
             <div class="text-[#9ccfd8] md:text-[16px] text-[15px]"><i
                 class="fa-solid fa-address-card pr-[0.9rem]"></i>Pedro Ivo Rocha
               <pre class="text-[#9ccfd8]">-----------------------</pre>
-
             </div>
-
-            <a href="https://drive.google.com/file/d/1qlo7-04bHkbtzSmHs35e5OJd4Rws5j1-/view?usp=sharing">
+            <a href="https://drive.google.com/file/d/16NBa4Vdnif4YV7dSS_tvYdVPbdiOBI52/view?usp=sharing">
               <div class="text-[#9ccfd8] text-[17.3px]"><i
                   class="fa-solid fa-file-invoice pr-[1rem] justify-items-start"></i>Currículo<a
-                  href="https://drive.google.com/file/d/1qlo7-04bHkbtzSmHs35e5OJd4Rws5j1-/view?usp=sharing"
-                  class="text-[14.8px] p-1">→ &nbsp;Baixar meu currículo.</a></div>
+                  href="https://drive.google.com/file/d/16NBa4Vdnif4YV7dSS_tvYdVPbdiOBI52/view?usp=sharing"
+                  class="text-[14.8px] p-1">→ &nbsp;Veja meu currículo.</a></div>
               <a href="https://github.com/vegedra" target="blank">
                 <div class="text-[#9ccfd8] text-[17.3px]"><i
                     class="fa-brands fa-github pr-[0.7rem] justify-items-start"></i>Github<a
@@ -85,6 +82,7 @@
                           href="https://www.instagram.com/yvvo_sounds/" target="blank" class="text-[14.8px] p-1">→
                           &nbsp;instagram/yvvo_sounds/</a></div>
           </div>
+
         </div>
         <div id="terminal">
           <a id="before"></a>
@@ -95,7 +93,6 @@
           <div id="liner">
             <span id="typer"></span><b class="cursor" id="cursor">█</b>
             <div class="list"></div>
-
           </div>
         </div>
         <footer class="lg:pt-[28.5%] pt-[100%]">
