--- a/theme.html
+++ b/theme.html
@@ -48,7 +48,7 @@
         <div class="flex flex-col md:flex-row">
           <pre
             class="ascii pt-2 pb-5 prose lg:prose-xl text-[#9ccfd8B3] whitespace-pre-wrap inline-block break-words leading-none"
-            style="font-family: monospace,-webkit-pictograph;">
+            style="font-family: monospace">
  888 Y8b Y88888P e88 88e
  888  Y8b Y888P d888 888b
  888   Y8b Y8P C8888 8888D
