--- a/theme.html
+++ b/theme.html
@@ -16,7 +16,14 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
-
+  <script src="https://kit.fontawesome.com/39565093f3.js""></script>
+    <script>function close_window() {
+        if (confirm("Sair?")) { close(); }
+      } </script>
+       <script 
+  src="https://code.jquery.com/jquery-3.6.1.js"
+  integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
+  crossorigin="anonymous"></script>
   <title>Pedro Ivo</title>
 </head>
 
@@ -30,7 +37,7 @@
 
       <header>
         <p class="p-2 text-center text-slate-400">
-          <a href="https://vegedra.github.io"><i
+          <a href="https://github.com/vegedra/" target="blank"><i
               class="fa-brands fa-github pt-[2.5px] text-xl float-left text-slate-500 hover:text-pink-800"></i>visitante@ivo</a>
           <a href="javascript:close_window();"><i
               class="fa-solid fa-circle-xmark pt-[2.5px] text-xl justify-end text-slate-500 hover:text-red-500 items-end  float-right"></i></a>
