exportado de forma automatica em 29-08-2024 21:56

--- a/theme.html
+++ b/theme.html
@@ -37,7 +37,7 @@
 
       <header>
         <p class="p-2 text-center text-slate-400">
-          <a href="https://github.com/vegedra/" target="blank"><i
+          <a href="https://vegedra.github.io" target="blank"><i
               class="fa-brands fa-github pt-[2.5px] text-xl float-left text-slate-500 hover:text-pink-800"></i>visitante@ivo</a>
           <a href="javascript:close_window();"><i
               class="fa-solid fa-circle-xmark pt-[2.5px] text-xl justify-end text-slate-500 hover:text-red-500 items-end  float-right"></i></a>
