--- a/theme.html
+++ b/theme.html
@@ -37,7 +37,7 @@
 
       <header>
         <p class="p-2 text-center text-slate-400">
-          <a href="https://vegedra.github.io" target="blank"><i
+          <a href="https://vegedra.github.io"><i
               class="fa-brands fa-github pt-[2.5px] text-xl float-left text-slate-500 hover:text-pink-800"></i>visitante@ivo</a>
           <a href="javascript:close_window();"><i
               class="fa-solid fa-circle-xmark pt-[2.5px] text-xl justify-end text-slate-500 hover:text-red-500 items-end  float-right"></i></a>
@@ -60,10 +60,10 @@
                 class="fa-solid fa-address-card pr-[0.9rem]"></i>Pedro Ivo Rocha
               <pre class="text-[#9ccfd8]">-----------------------</pre>
             </div>
-            <a href="https://drive.google.com/file/d/16NBa4Vdnif4YV7dSS_tvYdVPbdiOBI52/view?usp=sharing">
-              <div class="text-[#9ccfd8] text-[17.3px]"><i
-                  class="fa-solid fa-file-invoice pr-[1rem] justify-items-start"></i>Currículo<a
-                  href="https://drive.google.com/file/d/16NBa4Vdnif4YV7dSS_tvYdVPbdiOBI52/view?usp=sharing"
+            <a href="https://drive.google.com/file/d/16NBa4Vdnif4YV7dSS_tvYdVPbdiOBI52/view?usp=sharing" target="blank">
+              <div class="text-[#9ccfd8] text-[17.3px]">
+			  <i class="fa-solid fa-file-invoice pr-[1rem] justify-items-start"></i>Currículo
+			  <a href="https://drive.google.com/file/d/16NBa4Vdnif4YV7dSS_tvYdVPbdiOBI52/view?usp=sharing" target="blank"
                   class="text-[14.8px] p-1">→ &nbsp;Veja meu currículo.</a></div>
               <a href="https://github.com/vegedra" target="blank">
                 <div class="text-[#9ccfd8] text-[17.3px]"><i
