exportado de forma automatica em 09-09-2024 20:10

--- a/theme.html
+++ b/theme.html
@@ -60,26 +60,38 @@
                 class="fa-solid fa-address-card pr-[0.9rem]"></i>Pedro Ivo Rocha
               <pre class="text-[#9ccfd8]">-----------------------</pre>
             </div>
+			
             <a href="https://drive.google.com/file/d/1YsHQsCI-EIy2diSaOuq0Ncww_fM7ih3b/view?usp=sharing" target="blank">
               <div class="text-[#9ccfd8] text-[17.3px]">
 			  <i class="fa-solid fa-file-invoice pr-[1rem] justify-items-start"></i>Currículo
 			  <a href="https://drive.google.com/file/d/1YsHQsCI-EIy2diSaOuq0Ncww_fM7ih3b/view?usp=sharing" target="blank"
                   class="text-[14.8px] p-1">→ &nbsp;Veja meu currículo.</a></div>
-              <a href="https://github.com/vegedra" target="blank">
+				  
+            <a href="https://github.com/vegedra" target="blank">
                 <div class="text-[#9ccfd8] text-[17.3px]"><i
                     class="fa-brands fa-github pr-[0.7rem] justify-items-start"></i>Github<a
                     href="https://github.com/vegedra" target="blank" class="text-[14.8px] p-1 ">→
                     &nbsp;github/vegedra</a></div>
-                  <a href="https://www.linkedin.com/in/pedro-ivo-rocha/" target="blank">
-                    <div class="text-[#9ccfd8] text-[17.3px]"><i
-                        class="fa-brands fa-linkedin-in pr-[0.9rem] justify-items-start"></i>Linkedin<a
-                        href="https://www.linkedin.com/in/pedro-ivo-rocha/" target="blank"
-                        class="text-[14.8px] p-1">→ &nbsp;linkedin/pedro-ivo-rocha/</a></div>
-                    <a href="https://www.instagram.com/yvvo_sounds/" target="blank">
-                      <div class="text-[#9ccfd8] text-[17.3px]"><i
-                          class="fa-brands fa-instagram pr-[0.9rem] justify-items-start"></i>Instagram<a
-                          href="https://www.instagram.com/yvvo_sounds/" target="blank" class="text-[14.8px] p-1">→
-                          &nbsp;instagram/yvvo_sounds/</a></div>
+            <a href="https://www.linkedin.com/in/pedro-ivo-rocha/" target="blank">
+                <div class="text-[#9ccfd8] text-[17.3px]"><i
+                    class="fa-brands fa-linkedin-in pr-[0.9rem] justify-items-start"></i>Linkedin<a
+                    href="https://www.linkedin.com/in/pedro-ivo-rocha/" target="blank"
+                    class="text-[14.8px] p-1">→ &nbsp;linkedin/pedro-ivo-rocha/</a></div>
+            <a href="https://www.instagram.com/yvvo_sounds/" target="blank">
+				<div class="text-[#9ccfd8] text-[17.3px]"><i
+                    class="fa-brands fa-instagram pr-[0.9rem] justify-items-start"></i>Instagram<a
+                    href="https://www.instagram.com/yvvo_sounds/" target="blank" class="text-[14.8px] p-1">→
+                    &nbsp;instagram/yvvo_sounds/</a></div>
+			<a href="https://digitalcakestudio.itch.io/" target="blank">
+				<div class="text-[#9ccfd8] text-[17.3px]"><i
+                    class="fa-solid fa-gamepad pr-[0.9rem] justify-items-start"></i>Meus jogos<a
+                    href="https://digitalcakestudio.itch.io/" target="blank" class="text-[14.8px] p-1">→
+                    &nbsp;digitalcakestudio.itch.io/</a></div>
+			<a href="https://linktr.ee/yvvo_sounds/" target="blank">
+				<div class="text-[#9ccfd8] text-[17.3px]"><i
+                    class="fa-solid fa-music pr-[0.9rem] justify-items-start"></i>Minhas músicas<a
+                    href="https://linktr.ee/yvvo_sounds/" target="blank" class="text-[14.8px] p-1">→
+                    &nbsp;linktr.ee/yvvo_sounds/</a></div>
           </div>
 
         </div>
