--- a/theme.html
+++ b/theme.html
@@ -92,6 +92,11 @@
                     class="fa-solid fa-music pr-[0.9rem] justify-items-start"></i>Minhas músicas<a
                     href="https://linktr.ee/yvvo_sounds/" target="blank" class="text-[14.8px] p-1">→
                     &nbsp;linktr.ee/yvvo_sounds/</a></div>
+			<a href="https://livrosdoivo.blogspot.com/" target="blank">
+				<div class="text-[#9ccfd8] text-[17.3px]"><i
+                    class="fa-solid fa-book pr-[0.9rem] justify-items-start"></i>Meus livros<a
+                    href="https://livrosdoivo.blogspot.com/" target="blank" class="text-[14.8px] p-1">→
+                    &nbsp;livrosdoivo.blogspot.com/</a></div>
           </div>
 
         </div>
