--- a/theme.html
+++ b/theme.html
@@ -95,7 +95,7 @@
 			<a href="https://ivowrites.github.io/" target="blank">
 				<div class="text-[#9ccfd8] text-[17.3px]"><i
                     class="fa-solid fa-book pr-[0.9rem] justify-items-start"></i>Meus livros<a
-                    href="https://livrosdoivo.blogspot.com/" target="blank" class="text-[14.8px] p-1">→
+                    href="https://ivowrites.github.io/" target="blank" class="text-[14.8px] p-1">→
                     &nbsp;ivowrites.github.io/</a></div>
           </div>
 
