--- a/theme.html
+++ b/theme.html
@@ -92,11 +92,11 @@
                     class="fa-solid fa-music pr-[0.9rem] justify-items-start"></i>Minhas músicas<a
                     href="https://linktr.ee/yvvo_sounds/" target="blank" class="text-[14.8px] p-1">→
                     &nbsp;linktr.ee/yvvo_sounds/</a></div>
-			<a href="https://bit.ly/ivo-writes" target="blank">
+			<a href="https://ivotheca.neocities.org/" target="blank">
 				<div class="text-[#9ccfd8] text-[17.3px]"><i
                     class="fa-solid fa-book pr-[0.9rem] justify-items-start"></i>Meus livros<a
-                    href="https://bit.ly/ivo-writes" target="blank" class="text-[14.8px] p-1">→
-                    &nbsp;ivowrites.wixsite.com</a></div>
+                    href="https://ivotheca.neocities.org/" target="blank" class="text-[14.8px] p-1">→
+                    &nbsp;ivotheca.neocities.org/</a></div>
           </div>
 
         </div>
