--- a/theme.html
+++ b/theme.html
@@ -97,6 +97,11 @@
                     class="fa-solid fa-book pr-[0.9rem] justify-items-start"></i>Meus livros<a
                     href="https://ivotheca.neocities.org/" target="blank" class="text-[14.8px] p-1">→
                     &nbsp;ivotheca.neocities.org/</a></div>
+				<a href="https://ivotheca.neocities.org/blog" target="blank">
+				<div class="text-[#9ccfd8] text-[17.3px]"><i
+                    class="fa-solid fa-book pr-[0.9rem] justify-items-start"></i>Meu Blog<a
+                    href="https://ivotheca.neocities.org/blog" target="blank" class="text-[14.8px] p-1">→
+                    &nbsp;ivotheca.neocities.org/blog</a></div>
           </div>
 
         </div>
