--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <li>Área de dados no geral.</li>
         </ul>
 		<br>
-        <p>🔭 Gosto de criar projetos novos e quebrar a cabeça tentando fazê-los. No momento a única linguagem que posso dizer que sei alguma coisa é Python. Também gosto de escrever e produzir música. Dê uma olhada na parte de links!</p>
+        <p>🔭 Gosto de criar projetos novos e quebrar a cabeça tentando fazê-los. Também gosto de escrever e produzir música. Dê uma olhada na parte de links!</p>
 		<br>
         <p>📫 Para entrar em contato: <a href="mailto:pedroivo0513@gmail.com">pedroivo0513@gmail.com</a></p>
 
