--- a/mais.html
+++ b/mais.html
@@ -38,7 +38,7 @@
 		<h1>📚 Minhas habilidades:</h1>
 		<p>Tenho nível intermediário em inglês, me considero autodidata e mexo com computadores desde que me conheço por gente.</p>
 		<br>
-		<h3>Linguagens de programação que sei (todas a nível básico):</h3>
+		<h3>Linguagens de programação que sei (nível básico):</h3>
 		<ul>
 			<li>Python;</li>
 			<li>C;</li>
@@ -61,7 +61,7 @@
 		<br>
 		<h1>Eu também faço outras coisas!</h1>
 		<h2>Faço música!</h2>
-		<p>🎧 Produzo músicas desde 2019, tendo lançado vários álbuns instrumentais nos gêneros de Eletronica e Hip Hop.</p>
+		<p>🎧 Produzo músicas desde 2019, tendo lançado vários álbuns de música eletrônica e Lo-Fi Hip Hop.</p>
 		<br>
 		<p>📫 Para ouvir minhas músicas: <a href="https://linktr.ee/yvvo_sounds" target="blank">Clique aqui.</a></p>
 		<h2>Também desenvolvo jogos!</h2>
@@ -69,8 +69,8 @@
 		<br>
 		<p>📫 Para visualizar os jogos que já desenvolvi: <a href="https://digitalcakestudio.itch.io/" target="blank">Clique aqui.</a></p>
 		<h2>Também sou escritor!</h2>
-		<p>📚 Sempre gostei de escrever histórias desde criança, desde livros a pequenos textos.
-		Por enquanto só publiquei alguns poemas, mas tenho muitos projetos ainda em planejamento.</p>
+		<p>📚 Desde criança, sempre gostei de escrever histórias, seja em forma de livros ou pequenos textos. Até 
+		o momento, publiquei apenas alguns poemas, mas tenho muitos projetos em andamento, que ainda estão em fase de planejamento.</p>
 		<br>
 		<p>📫 Para ler meus textos: <a href="https://ivotheca.neocities.org/" target="blank">Clique aqui.</a></p>
 	    	<br>
