--- a/projetos.html
+++ b/projetos.html
@@ -40,8 +40,8 @@
 		<iframe width="600" height="180" src="https://www.moddb.com/games/egos-cybercrime/downloads/egos-cybercrime-demo-windows/widget" frameborder="0"></iframe><br><a href="https://www.moddb.com/games/egos-cybercrime/downloads/egos-cybercrime-demo-windows"></a>
 		<br>
 		<p>Um jogo de exploração e aventura baseado em texto feito usando Python 
-como forma de aprender a linguagem, acabou se tornando um projeto mais sério que continuo desenvolvendo
-ativamente.</p>
+		como forma de aprender a linguagem, mas acabou se tornando um projeto mais sério que continuo desenvolvendo
+		ativamente.</p>
 		<br>
 		<p>Caso queira testar o jogo, o mesmo está disponível para Windows e Linux: <a href="https://digitalcakestudio.itch.io/egos-cybercrime/" target="blank">Clique aqui.</a></p>
 		<br>
@@ -54,11 +54,11 @@ ativamente.</p>
 		</ul>
 		<br>
 		<h2><a href="https://github.com/vegedra/hoobler" target="blank"><span class='underline'>Assistente I.A. Hoobler</span></a></h2>
-		<p>Um assistente I.A. focado em facilitar o acesso a aplicações, com suporte a atalhos e outras funções úteis.
-Possui versões CLI -- utilizando do distribuidor de pacotes Python Pypi -- e TUI, utilizando da 
-biblioteca Curses.</p>
+		<p>Um assistente chatbot focado em facilitar o acesso a aplicações, com suporte a atalhos e outras funções úteis.
+		Possui versões CLI — utilizando do distribuidor de pacotes Python Pypi — e TUI, utilizando da 
+		biblioteca Curses.</p>
 		<br>
-		<p>O projeto ainda não está finalizado, mas pode ser instalado usando PyPi: <a href="https://pypi.org/project/Hoobler/" target="blank">Clique aqui.</a></p>
+		<p>O projeto ainda não está finalizado, mas uma versão teste pode ser instalada usando PyPi: <a href="https://pypi.org/project/Hoobler/" target="blank">Clique aqui.</a></p>
 		<br>
 		<h3>Feito com:</h3>
 		<ul>
@@ -69,9 +69,9 @@ biblioteca Curses.</p>
 		</ul>
 		<br>
 		<h2><a href="https://ivotheca.neocities.org" target="blank"><span class='underline'>Site e Blog Ivotheca</span></a></h2>
-		<p>Meu segundo site pessoal focado nas minhas obras escritas, como romances e contos de ficção.
-O site é feito em HTML, CSS e Javascript puro, hosteado na plataforma Neocities. Também conta com 
-um blog que usa a engine <a href="https://zonelets.net/" target="_blank">Zonelets</a> de Marina Kittaka.</p>
+		<p>Este é o meu segundo site pessoal, dedicado às minhas obras escritas, como romances e contos de ficção. O site foi desenvolvido 
+		utilizando HTML, CSS e JavaScript puro, e está hospedado na plataforma Neocities. Também conta com 
+		um blog que usa a engine <a href="https://zonelets.net/" target="_blank">Zonelets</a> de Marina Kittaka.</p>
 		<br>
     </div>
 </main>
