--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <p>Oi, é o <a href="#">Ivo!</a> 👋</p>
 		<br>
-        <p>👨‍💻 Sou um estudante de <a href="https://drummond.com.br/cursos/analise-e-desenvolvimento-de-sistemas/" target="_blank">ADS</a> que gosta de programar jogos e outras besteiras.</p>
+        <p>👨‍💻 Sou um estudante de <a href="https://pt.wikipedia.org/wiki/An%C3%A1lise_de_sistemas_e_tecnologia_da_informa%C3%A7%C3%A3o" target="_blank">ADS</a> que gosta de programar jogos e outras besteiras.</p>
 
         <p>🌱 Me interesso em:</p>
         <ul>
@@ -48,7 +48,7 @@
             <li>Área de dados no geral.</li>
         </ul>
 		<br>
-        <p>🔭 Gosto de criar projetos novos e quebrar a cabeça tentando fazê-los. Também gosto de escrever e produzir música. Dê uma olhada na parte de links!</p>
+        <p>Gosto de criar projetos novos e quebrar a cabeça tentando fazê-los. Também gosto de escrever e produzir música. Dê uma olhada na parte de links!</p>
 		<br>
         <p>📫 Para entrar em contato: <a href="mailto:pedroivo0513@gmail.com">pedroivo0513@gmail.com</a></p>
 
