--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <p>Oi, é o <a href="#">Ivo!</a> 👋</p>
 		<br>
-        <p>👨‍💻 Sou um estudante de <a href="https://pt.wikipedia.org/wiki/An%C3%A1lise_de_sistemas_e_tecnologia_da_informa%C3%A7%C3%A3o" target="_blank">ADS</a> que gosta de programar jogos e outras besteiras.</p>
+        <p>🖥️ Sou um estudante de <a href="https://pt.wikipedia.org/wiki/An%C3%A1lise_de_sistemas_e_tecnologia_da_informa%C3%A7%C3%A3o" target="_blank">ADS</a> que gosta de programar jogos e outras besteiras.</p>
 
         <p>🌱 Me interesso em:</p>
         <ul>
