--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <a href="https://www.linkedin.com/in/pedro-ivo-rocha/" target="_blank" title="LinkedIn">
             <i class="fab fa-linkedin"></i>
         </a>
-        <a href="https://instagram.com/yvvo_sounds/" target="_blank" title="Instagram">
+        <a href="https://instagram.com/ivo.theca/" target="_blank" title="Instagram">
             <i class="fab fa-instagram"></i>
         </a>
         <a href="https://ivotheca.neocities.org/" target="_blank" title="IvoTheca - Meu site de escritor">
