--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
         <h2>Meus principais links:</h2>
         <ul>
             <li><a href="https://drive.google.com/file/d/1YsHQsCI-EIy2diSaOuq0Ncww_fM7ih3b/view?usp=sharing" target="_blank">Currículo → Veja meu currículo</a></li>
-            <li><a href="https://digitalcakestudio.itch.io/" target="_blank">Meus jogos → digitalcakestudio.itch.io/</a></li>
-            <li><a href="https://linktr.ee/yvvo_sounds/" target="_blank">Minhas músicas → linktr.ee/yvvo_sounds/</a></li>
-            <li><a href="https://ivotheca.neocities.org/" target="_blank">Meus livros → ivotheca.neocities.org/</a></li>
+            <li><a href="http://lattes.cnpq.br/3470616310549779" target="_blank">Currículo Lattes → Veja meu currículo na Lattes</a></li>
+	    <li><a href="https://digitalcakestudio.itch.io/" target="_blank">Meus Jogos → digitalcakestudio.itch.io/</a></li>
+            <li><a href="https://linktr.ee/yvvo_sounds/" target="_blank">Minhas Músicas → linktr.ee/yvvo_sounds/</a></li>
+            <li><a href="https://ivotheca.neocities.org/" target="_blank">Meus Livros → ivotheca.neocities.org/</a></li>
             <li><a href="https://ivotheca.neocities.org/blog" target="_blank">Meu Blog → ivotheca.neocities.org/blog</a></li>
         </ul>
     </div>
