--- a/projetos.html
+++ b/projetos.html
@@ -73,6 +73,7 @@
 		utilizando HTML, CSS e JavaScript puro, e está hospedado na plataforma Neocities. Também conta com 
 		um blog que usa a engine <a href="https://zonelets.net/" target="_blank">Zonelets</a> de Marina Kittaka.</p>
 		<br>
+		<h2><a href="https://ivotheca.neocities.org/" target="blank"><span class='underline'>Outros Projetos: Clique aqui!</span></a></h2>
     </div>
 </main>
 <hr class="dashed-2">
