--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             <li><a href="https://drive.google.com/file/d/1kPn_CrQXozh2anppuw7qk8LbTAM7TeQO/view?usp=sharing" target="_blank">Currículo → Veja meu currículo</a></li>
             <li><a href="http://lattes.cnpq.br/3470616310549779" target="_blank">Currículo Lattes → Veja meu currículo na Lattes</a></li>
 	    <li><a href="https://www.linkedin.com/in/pedro-ivo-rocha/" target="_blank">Meu Linkedin → linkedin.com/pedro-ivo-rocha/</a></li>
+	    <li><a href="https://pdivo.substack.com/" target="_blank">Meu Substack → pdivo.substack.com//</a></li>
 	    <li><a href="https://ivotheca.neocities.org/" target="_blank">Meus Livros → ivotheca.neocities.org/</a></li>
 	    <li><a href="https://digitalcakestudio.itch.io/" target="_blank">Meus Jogos → digitalcakestudio.itch.io/</a></li>
             <li><a href="https://linktr.ee/yvvo_sounds/" target="_blank">Minhas Músicas → linktr.ee/yvvo_sounds/</a></li>
