--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li><a href="index.html">/início</a></li>
             <li><a href="mais.html">/mais</a></li>
 			<li><a href="projetos.html">/projetos</a></li>
+			<li><a href="https://ivotheca.neocities.org/galeria/">/galeria</a></li>
         </ul>
 		<br>
     </nav>
@@ -61,6 +62,7 @@
 	    <li><a href="https://ivotheca.neocities.org/" target="_blank">Meus Livros → ivotheca.neocities.org/</a></li>
 	    <li><a href="https://digitalcakestudio.itch.io/" target="_blank">Meus Jogos → digitalcakestudio.itch.io/</a></li>
             <li><a href="https://linktr.ee/yvvo_sounds/" target="_blank">Minhas Músicas → linktr.ee/yvvo_sounds/</a></li>
+			<li><a href="https://ivotheca.neocities.org/galeria/" target="_blank">Minhas Artes → ivotheca.neocities.org/galeria/</a></li>
         </ul>
     </div>
 </main>
@@ -92,3 +94,4 @@
 </footer>
 </body>
 </html>
+
