--- a/projetos.html
+++ b/projetos.html
@@ -18,6 +18,7 @@
             <li><a href="index.html">/início</a></li>
             <li><a href="mais.html">/mais</a></li>
 			<li><a href="projetos.html">/projetos</a></li>
+			<li><a href="https://ivotheca.neocities.org/galeria/">/galeria</a></li>
         </ul>
 		<br>
     </nav>
@@ -96,3 +97,4 @@
 </footer>
 </body>
 </html>
+
