--- a/index.html
+++ b/index.html
@@ -38,31 +38,31 @@
         </pre>
         <h1>Bem-vindo ao site de Pedro Ivo Rocha</h1>
 
-        <p>Oi, é o <a href="#">Ivo!</a> 👋</p>
+        <p>Oi, é o <a href="#">Ivo!</a></p>
 		<br>
-        <p>🖥️ Sou um estudante de <a href="https://pt.wikipedia.org/wiki/An%C3%A1lise_de_sistemas_e_tecnologia_da_informa%C3%A7%C3%A3o" target="_blank">ADS</a> que gosta de computadores.</p>
+        <p>Sou um estudante de <a href="https://pt.wikipedia.org/wiki/An%C3%A1lise_de_sistemas_e_tecnologia_da_informa%C3%A7%C3%A3o" target="_blank">ADS</a> que gosta de computadores.</p>
 
-        <p>🌱 Me interesso em:</p>
+        <p>Meus interesses:</p>
         <ul>
             <li>Desenvolvimento Back-End;</li>
-	    <li>Área de dados no geral;</li>
+	    	<li>Área de dados no geral;</li>
             <li>Desenvolvimento de jogos.</li>
         </ul>
 		<br>
-        <p>Gosto de trabalhar em projetos novos e aprender coisas novas. Também gosto de escrever e produzir música. Dê uma olhada na parte de links!</p>
+        <p>Gosto de criar e aprender coisas novas, mesmo quando estão um pouco além das minhas habilidades. Também gosto de escrever e produzir música. Dê uma olhada na parte de links!</p>
 		<br>
-        <p>📫 Para entrar em contato: <a href="mailto:pedroivo0513@gmail.com">pedroivo0513@gmail.com</a></p>
+        <p>Para entrar em contato: <a href="mailto:pedroivo0513@gmail.com">pedroivo0513@gmail.com</a></p>
 
         <h2>Meus principais links:</h2>
         <ul>
-            <li><a href="https://drive.google.com/file/d/1kPn_CrQXozh2anppuw7qk8LbTAM7TeQO/view?usp=sharing" target="_blank">Currículo → Veja meu currículo</a></li>
-            <li><a href="http://lattes.cnpq.br/3470616310549779" target="_blank">Currículo Lattes → Veja meu currículo na Lattes</a></li>
-	    <li><a href="https://www.linkedin.com/in/pedro-ivo-rocha/" target="_blank">Meu Linkedin → linkedin.com/pedro-ivo-rocha/</a></li>
-	    <li><a href="https://pdivo.substack.com/" target="_blank">Meu Substack → pdivo.substack.com//</a></li>
-	    <li><a href="https://ivotheca.neocities.org/" target="_blank">Meus Livros → ivotheca.neocities.org/</a></li>
-	    <li><a href="https://digitalcakestudio.itch.io/" target="_blank">Meus Jogos → digitalcakestudio.itch.io/</a></li>
-            <li><a href="https://linktr.ee/yvvo_sounds/" target="_blank">Minhas Músicas → linktr.ee/yvvo_sounds/</a></li>
-			<li><a href="https://ivotheca.neocities.org/galeria/" target="_blank">Minhas Artes → ivotheca.neocities.org/galeria/</a></li>
+            <li><a href="https://drive.google.com/file/d/1kPn_CrQXozh2anppuw7qk8LbTAM7TeQO/view?usp=sharing" target="_blank">Currículo > Veja meu currículo</a></li>
+            <li><a href="http://lattes.cnpq.br/3470616310549779" target="_blank">Currículo Lattes > Veja meu currículo na Lattes</a></li>
+	    <li><a href="https://www.linkedin.com/in/pedro-ivo-rocha/" target="_blank">Meu Linkedin > linkedin.com/pedro-ivo-rocha/</a></li>
+	    <li><a href="https://pdivo.substack.com/" target="_blank">Meu Substack > pdivo.substack.com//</a></li>
+	    <li><a href="https://ivotheca.neocities.org/" target="_blank">Meus Livros > ivotheca.neocities.org/</a></li>
+	    <li><a href="https://digitalcakestudio.itch.io/" target="_blank">Meus Jogos > digitalcakestudio.itch.io/</a></li>
+            <li><a href="https://linktr.ee/yvvo_sounds/" target="_blank">Minhas Músicas > linktr.ee/yvvo_sounds/</a></li>
+			<li><a href="https://ivotheca.neocities.org/galeria/" target="_blank">Minhas Artes > ivotheca.neocities.org/galeria/</a></li>
         </ul>
     </div>
 </main>
@@ -94,4 +94,5 @@
 </footer>
 </body>
 </html>
+
 
