--- a/mais.html
+++ b/mais.html
@@ -36,45 +36,54 @@
 888      Y8P      "88 88"
 			</center>
         </pre>
-		<h1>📚 Minhas habilidades:</h1>
-		<p>Tenho nível intermediário em inglês, me considero autodidata e mexo com computadores desde que me conheço por gente.</p>
-		<br>
-		<h3>Linguagens de programação que sei (nível básico):</h3>
+		<h1>Minhas habilidades:</h1>
+		<ul>
+			<li>Inglês intermediário;</li>
+			<li>Edição de vídeos e imagens;</li>
+			<li>Escrita criativa;</li>
+			<li>Produção musical.</li>
+		</ul>
+
+		<h3>Linguagens de programação:</h3>
 		<ul>
 			<li>Python;</li>
-			<li>C;</li>
+			<li>C/C++;</li>
+			<li>Java;</li>
 			<li>Batch;</li>
 			<li>HTML, CSS & JS;</li>
 			<li>QBasic;</li>
 			<li>Bash.</li>
 		</ul>
+		
 		<br>
-		<h3>Ferramentas que sei usar:</h3>
+		<h3>Ferramentas:</h3>
 		<ul>
 			<li>Git;</li>
 			<li>Photoshop;</li>
 			<li>Pacote Office;</li>
-			<li>VS Code;</li>
+			<li>Power BI;</li>
 			<li>Corel Draw;</li>
 			<li>Wondershare Filmora;</li>
 			<li>FL Studio.</li>
 		</ul>
 		<br>
-		<h1>Eu também faço outras coisas!</h1>
-		<h2>Faço música!</h2>
-		<p>🎧 Produzo músicas desde 2019, tendo lançado vários álbuns de música eletrônica e Lo-Fi Hip Hop.</p>
+		
+		<h1>Outras coisas que faço:</h1>
+		<h2>Música</h2>
+		<p>Produzo músicas desde 2019, tendo lançado vários álbuns de música eletrônica e Lo-Fi Hip Hop sob o nome Yvvo e Vital Waves.</p>
 		<br>
-		<p>📫 Para ouvir minhas músicas: <a href="https://linktr.ee/yvvo_sounds" target="blank">Clique aqui.</a></p>
-		<h2>Também desenvolvo jogos!</h2>
-		<p>🎮 Desenvolvo jogos eletrônicos desde 2017 sob o nome Digital Cake.</p>
+		<p>Para ouvir minhas músicas: <a href="https://linktr.ee/yvvo_sounds" target="blank">Clique aqui.</a></p>
+		
+		<h2>Jogos</h2>
+		<p>Desenvolvo jogos eletrônicos desde 2017, sob o nome Digital Cake.</p>
 		<br>
-		<p>📫 Para visualizar os jogos que já desenvolvi: <a href="https://digitalcakestudio.itch.io/" target="blank">Clique aqui.</a></p>
-		<h2>Também sou escritor!</h2>
-		<p>📚 Desde criança, sempre gostei de escrever histórias, seja em forma de livros ou pequenos textos. Até 
-		o momento, publiquei apenas alguns poemas, mas tenho muitos projetos em andamento, que ainda estão em fase de planejamento.</p>
+		<p>Para visualizar os jogos que já desenvolvi: <a href="https://digitalcakestudio.itch.io/" target="blank">Clique aqui.</a></p>
+		
+		<h2>Escrita</h2>
+		<p>Escrevo poemas, crônicas, ensaios e contos. Tenho dois livros de ficção publicados.</p>
 		<br>
-		<p>📫 Para ler meus textos: <a href="https://ivotheca.neocities.org/" target="blank">Clique aqui.</a></p>
-	    	<br>
+		<p>Para ler meus textos: <a href="https://ivotheca.neocities.org/" target="blank">Clique aqui.</a></p>
+	    <br>
 	</div>
 </main>
 <hr class="dashed-2">
@@ -97,4 +106,5 @@
 </footer>
 </body>
 </html>
+
 
