--- a/projetos.html
+++ b/projetos.html
@@ -49,11 +49,12 @@
 		<h3>Feito com:</h3>
 		<ul>
 			<li>Python;</li>
-			<li>Biblioteca gráfica BearLibTerminal;
-			<li>Pygame Mixer;
-			<li>Notepad++, pois VSCode me irrita.
+			<li>Biblioteca gráfica BearLibTerminal;</li>
+			<li>Pygame Mixer;</li>
+			<li>Notepad++.</li>
 		</ul>
 		<br>
+		
 		<h2><a href="https://github.com/vegedra/hoobler" target="blank"><span class='underline'>Assistente I.A. Hoobler</span></a></h2>
 		<p>Um assistente chatbot focado em facilitar o acesso a aplicações, com suporte a atalhos e outras funções úteis.
 		Possui versões CLI — utilizando do distribuidor de pacotes Python Pypi — e TUI, utilizando da 
@@ -63,12 +64,13 @@
 		<br>
 		<h3>Feito com:</h3>
 		<ul>
-			<li>Python;
-			<li>Biblioteca Curses;
-			<li>WTTR API;
-			<li>Dessa vez usei VSCode.
+			<li>Python;</li>
+			<li>Biblioteca Curses;</li>
+			<li>WTTR API;</li>
+			<li>VS Code.</li>
 		</ul>
 		<br>
+		
 		<h2><a href="https://ivotheca.neocities.org" target="blank"><span class='underline'>Site e Blog Ivotheca</span></a></h2>
 		<p>Este é o meu segundo site pessoal, dedicado às minhas obras escritas, como romances e contos de ficção. O site foi desenvolvido 
 		utilizando HTML, CSS e JavaScript puro, e está hospedado na plataforma Neocities. Também conta com 
@@ -97,4 +99,5 @@
 </footer>
 </body>
 </html>
+
 
